--- a/app/views/trestle/active_storage/_has_one_field.html.erb
+++ b/app/views/trestle/active_storage/_has_one_field.html.erb
@@ -5,7 +5,7 @@
         <%= link_to image_tag(main_app.url_for(attachment.preview(resize: "300x300>")), class: "active-storage__image"),
                     main_app.rails_blob_path(attachment, disposition: "attachment") %>
       <% elsif attachment.variable? %>
-        <%= link_to image_tag(main_app.url_for(attachment.variant(resize: "300x300>")), class: "active-storage__image"),
+        <%= link_to image_tag(main_app.url_for(attachment), width: "100", class: "active-storage__image"),
                     main_app.rails_blob_path(attachment, disposition: "attachment") %>
       <% else %>
         <%= link_to main_app.rails_blob_path(attachment, disposition: "attachment"), class: "btn btn-info" do %>
